<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:onClick="home"
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_highlight"
        android:enabled="true"
        android:icon="@drawable/highlight1"
        android:title="@string/highlight"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_aktivitas"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/aktivitas"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notifications"
        android:enabled="true"
        android:icon="@drawable/notifications"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="profile"
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>